--- a/WPF/Android/Views/RenovationDescriptionWindow.xaml
+++ b/WPF/Android/Views/RenovationDescriptionWindow.xaml
@@ -13,7 +13,7 @@
                 <Setter Property="FontSize" Value="22"/>
                 <Setter Property="FontFamily" Value="Global Sans Serif"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
-                <Setter Property="BorderThickness" Value="0,0,0,2"/>
+                <Setter Property="BorderThickness" Value="0,0,0,0"/>
             </Style.Setters>
         </Style>
 
@@ -59,7 +59,7 @@
         <Grid Background="{StaticResource Beige}">
         <Label Content="Renovation Description" FontFamily="{StaticResource Roboto}" FontSize="22" 
                VerticalAlignment="Top" HorizontalAlignment="Center" Padding="0" Margin="0,10" BorderBrush="{StaticResource HardGreen}"
-               BorderThickness="0,0,0,2" Style="{StaticResource Header}"/>
+               BorderThickness="0,0,0,0" Style="{StaticResource Header}" FontWeight="Medium"/>
         <TextBox x:Name="textBox" Text="{Binding RenovationDTO.Description}" IsEnabled="{Binding Editable}"
                  Height="150" Width="250" VerticalAlignment="Center" Margin="0,-15,0,15"/>
         <Button x:Name="ConfirmButton" Height="50" Width="120" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="15" Command="{Binding ConfirmCommand}"
