--- a/WPF/Android/Views/AccommodationStatisticsPage.xaml
+++ b/WPF/Android/Views/AccommodationStatisticsPage.xaml
@@ -23,8 +23,9 @@
                 <Setter Property="FontSize" Value="18"/>
                 <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource HardGreen}"/>
-                <Setter Property="BorderThickness" Value="0,0,0,2"/>
+                <Setter Property="BorderThickness" Value="0,0,0,0"/>
                 <Setter Property="Padding" Value="0"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style.Setters>
         </Style>
 
@@ -40,9 +41,9 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Border BorderBrush="{StaticResource HardGreen}" BorderThickness="0,0,0,2" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Border BorderBrush="{StaticResource HardGreen}" BorderThickness="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Label Content="{Binding AccommodationDTO.Name}" Style="{StaticResource Header1}" BorderBrush="Transparent"
-                   Padding="2"/>
+                   Padding="2" FontWeight="Medium"/>
         </Border>
 
         <TabControl Grid.Row="1" Height="550" Width="400">
