--- a/WPF/Android/Views/AndroidYesNoDialog.xaml
+++ b/WPF/Android/Views/AndroidYesNoDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BookingApp.WPF.Android.Views.AndroidDialogWindow"
+﻿<Window x:Class="BookingApp.WPF.Android.Views.AndroidYesNoDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -28,7 +28,9 @@
         <Image Grid.Column="0" Grid.Row="0" Height="50" Width="50" Source="{StaticResource AlertIcon}" RenderOptions.BitmapScalingMode="HighQuality" Margin="5,0"/>
         <TextBlock Text="{Binding Text}" Width="170" TextWrapping="Wrap" Grid.Column="1" Style="{StaticResource ButtonLabelTextBlock}"
                    VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
-        <Button Content="OK" FontSize="16" FontFamily="{StaticResource Roboto}" FontWeight="Medium" Foreground="{StaticResource Beige}" Background="{StaticResource Green}" Click="Button_Click"
-                Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Height="50" Width="100" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+        <Button x:Name="Yes" Content="Yes" FontSize="16" FontFamily="{StaticResource Roboto}" FontWeight="Medium" Foreground="{StaticResource Beige}" Background="{StaticResource Green}" Click="Yes_Click"
+                Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Height="50" Width="100" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="30,0,0,0"/>
+        <Button x:Name="No" Content="No" FontSize="16" FontFamily="{StaticResource Roboto}" FontWeight="Medium" Foreground="{StaticResource Beige}" Background="{StaticResource Green}" Click="No_Click"
+                Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Height="50" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,30,0"/>
     </Grid>
 </Window>
