--- a/WPF/Android/Views/ReservationReviewsPage.xaml
+++ b/WPF/Android/Views/ReservationReviewsPage.xaml
@@ -76,9 +76,9 @@
                         <RowDefinition Height="90"/>
                     </Grid.RowDefinitions>
 
-                    <Label  Grid.Row="1" FontFamily="{StaticResource Roboto}"
-                            Grid.Column="0" Grid.ColumnSpan="2" Foreground="red"
-                            VerticalAlignment="Top" Margin="0" HorizontalAlignment="Center">
+                        <Label  Grid.Row="1" FontFamily="{StaticResource Roboto}" FontSize="12" Padding="0"
+                            Grid.Column="0" Grid.ColumnSpan="2" Foreground="red" Margin="0,15,0,0"
+                            VerticalAlignment="Top" HorizontalAlignment="Center">
                         <Label.Style>
                             <Style TargetType="Label">
                                 <Setter Property="Content" Value=""/>
@@ -91,8 +91,18 @@
                                         <MultiDataTrigger.Conditions>
                                             <Condition Binding="{Binding ElementName=AssignGradeButton, Path=IsEnabled}" Value="False" />
                                             <Condition Binding="{Binding SelectedReservation.IsGradedByOwner}" Value="False"/>
+                                            <Condition Binding="{Binding SelectedReservation.IsReservationFinished}" Value="False"/>
                                         </MultiDataTrigger.Conditions>
-                                        <Setter Property="Content" Value="Grade time window expired" />
+                                        <Setter Property="Content" Value="Reservation hasn`t ended" />
+                                    </MultiDataTrigger>
+
+                                    <MultiDataTrigger>
+                                        <MultiDataTrigger.Conditions>
+                                            <Condition Binding="{Binding ElementName=AssignGradeButton, Path=IsEnabled}" Value="False" />
+                                            <Condition Binding="{Binding SelectedReservation.IsGradedByOwner}" Value="False"/>
+                                            <Condition Binding="{Binding SelectedReservation.IsReservationFinished}" Value="True"/>
+                                        </MultiDataTrigger.Conditions>
+                                        <Setter Property="Content" Value="Grade time period expired" />
                                     </MultiDataTrigger>
                                 </Style.Triggers>
                             </Style>
@@ -110,9 +120,9 @@
                         </StackPanel>
                     </Button>
 
-                    <Label  Grid.Row="1" FontFamily="{StaticResource Roboto}"
-                    Grid.Column="2" Grid.ColumnSpan="2" Foreground="red"
-                    VerticalAlignment="Top" Margin="0" HorizontalAlignment="Center">
+                    <Label  Grid.Row="1" FontFamily="{StaticResource Roboto}" FontSize="12"
+                    Grid.Column="2" Grid.ColumnSpan="2" Foreground="red" Margin="0,10,0,0"
+                    VerticalAlignment="Top" HorizontalAlignment="Center">
                         <Label.Style>
                             <Style TargetType="Label">
                                 <Setter Property="Content" Value=""/>
@@ -137,7 +147,8 @@
 
                     <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}" FontFamily="{StaticResource Roboto}"
           SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" FontSize="12"
-          SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+          SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                              ScrollViewer.VerticalScrollBarVisibility="Hidden">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Accommodation" Width="160" DisplayMemberBinding="{Binding Accommodation.Name}"/>
@@ -187,14 +198,16 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="70"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="Decline" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Width="130" Height="50" Command="{Binding DeclineButtonCommand}" Style="{StaticResource DisabledButtonStyle}">
+                    <Button x:Name="Decline" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Width="130" Height="50" Command="{Binding DeclineButtonCommand}" 
+                            Style="{StaticResource DisabledButtonStyle}" Click="Decline_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                             <Image Source="{StaticResource CancelIconBeige}" Height="30" Width="30"/>
                             <Label Content="Decline" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
 
-                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Width="130" Height="50" Command="{Binding AcceptButtonCommand}" Style="{StaticResource DisabledButtonStyle}">
+                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Width="130" Height="50" Command="{Binding AcceptButtonCommand}" 
+                            Style="{StaticResource DisabledButtonStyle}" Click="Accept_Click">
                         <StackPanel Orientation="Horizontal"  Margin="10,0,0,0">
                             <Image Source="{StaticResource ConfirmIconBeige}" Height="30" Width="30"/>
                             <Label Content="Accept" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
