--- a/WPF/Android/Views/ForumCommentCard.xaml
+++ b/WPF/Android/Views/ForumCommentCard.xaml
@@ -27,7 +27,7 @@
     </UserControl.Resources>
     <Grid>
         <StackPanel Orientation="Horizontal">
-            <Border Background="{StaticResource Beige}" BorderBrush="Black" BorderThickness="1" Width="300">
+            <Border Background="{StaticResource Beige}" BorderBrush="{StaticResource SoftGreen}" BorderThickness="2" Width="300" CornerRadius="20">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -38,7 +38,7 @@
                         <RowDefinition Height="0.3*"/>
                     </Grid.RowDefinitions>
 
-                    <Border BorderBrush="Black" BorderThickness="0,0,1,0" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Background="{StaticResource SoftGreen}"/>
+                    <Border BorderBrush="{StaticResource SoftGreen}" CornerRadius="20,0,0,20" BorderThickness="0,0,1,0" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Background="{StaticResource SoftGreen}"/>
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2">
                         <Image  Height="40" Width="40" Margin="5">
                             <Image.Style>
@@ -67,12 +67,12 @@
                         </Label>
                     </StackPanel>
 
-                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding CommentDTO.Text}" FontFamily="{StaticResource Roboto}" Margin="5" TextWrapping="Wrap" Height="50"/>
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding CommentDTO.Text}" FontFamily="{StaticResource Roboto}" Margin="5" TextWrapping="Wrap"/>
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="0,1,0,0" Grid.Row="1" Grid.Column="1" Padding="0">
                         <Grid>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5,0,0,0" Width="100" HorizontalAlignment="Left">
-                                <Label Content="Reports: " FontFamily="{StaticResource Roboto}" Padding="0" Margin="0"/>
-                                <Label Content="{Binding CommentDTO.ReportsNum}" Padding="0" FontFamily="{StaticResource Roboto}" Margin="0"/>
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0" Width="100" HorizontalAlignment="Left">
+                                <Label Content="Reports: " FontFamily="{StaticResource Roboto}" Padding="0" Margin="0" FontSize="12" FontWeight="Medium"/>
+                                <Label Content="{Binding CommentDTO.ReportsNum}" Padding="0" FontFamily="{StaticResource Roboto}" Margin="0" FontSize="12" FontWeight="Medium"/>
                                 <StackPanel.Style>
                                     <Style TargetType="StackPanel">
                                         <Setter Property="Visibility" Value="Visible" />
@@ -86,13 +86,13 @@
                             </StackPanel>
                             
                             <Label Content="{Binding CommentDTO.CreationDateString}" Padding="0" HorizontalAlignment="Right" VerticalAlignment="Center"
-                                   FontFamily="{StaticResource Roboto}" Margin="0,0,5,0"/>
+                                   FontFamily="{StaticResource Roboto}" Margin="0,0,10,0"  FontSize="12"/>
                         </Grid>
                     </Border >
                 </Grid>
             </Border>
 
-            <Button x:Name="ReportButton" Height="50" Width="50" Background="Transparent" Click="ReportButton_Click" IsEnabled="{Binding ReportButtonEnabled}">
+            <Button x:Name="ReportButton" Height="50" Width="50" Background="Transparent" BorderBrush="Transparent" Click="ReportButton_Click" IsEnabled="{Binding ReportButtonEnabled}">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50">
                     <Image Source="{StaticResource ReportIcon}" Width="25" Height="25"/>
                     <TextBlock Text="Report" FontFamily="{StaticResource Roboto}" FontSize="14" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
