--- a/WPF/Android/Views/ForumCommentsPage.xaml
+++ b/WPF/Android/Views/ForumCommentsPage.xaml
@@ -17,6 +17,13 @@
             </Style.Setters>
         </Style>
 
+        <Style TargetType="TextBlock" x:Key="HeaderTextblock">
+            <Style.Setters>
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
+            </Style.Setters>
+        </Style>
+
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
                 <Setter Property="FontSize" Value="18"/>
@@ -44,34 +51,29 @@
 
                 <Border Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,1">
                     <Grid Background="{StaticResource SoftGreen}">
-                        <StackPanel Orientation="Vertical" Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center">
-                            <Label Content="{Binding ForumDTO.Title}" Style="{StaticResource Header}" BorderBrush="Transparent" Padding="0"/>
-                            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                <TextBlock Text="Comments: " FontSize="16" FontFamily="{StaticResource Roboto}" Foreground="Black" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding ForumDTO.CommentNum}" FontSize="16" Padding="0" FontFamily="{StaticResource Roboto}" Foreground="Black" VerticalAlignment="Center"/>
-                            </StackPanel>
-                            
+                        <Border BorderBrush="{StaticResource Beige}" BorderThickness="0,0,0,1" Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                            <TextBlock Text="{Binding ForumDTO.Title}" Style="{StaticResource HeaderTextblock}" TextWrapping="Wrap" Padding="0" 
+                                    FontWeight="Medium"/>
+                            </Border>
+
+                                <StackPanel Orientation="Horizontal" Margin="15,0,0,5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                            <Image Source="{StaticResource LocationIcon}" Height="20" Width="20" Margin="0,0,5,0" RenderOptions.BitmapScalingMode="HighQuality"/>
+                            <Label Content="{Binding ForumDTO.Location.LocationInfoTemplate}" FontFamily="{StaticResource Roboto}" FontSize="16" Padding="0"/>
                         </StackPanel>
 
-                        <StackPanel Orientation="Vertical" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center">
-                            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                                <Image Source="{StaticResource LocationIcon}" Height="20" Width="20" Margin="0,0,5,0" RenderOptions.BitmapScalingMode="HighQuality"/>
-                                <Label Content="{Binding ForumDTO.Location.LocationInfoTemplate}" FontFamily="{StaticResource Roboto}" FontSize="16" Padding="0"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" >
-                                <Image Source="{StaticResource PeopleIcon}" Height="20" Width="20" Margin="0,0,5,0"/>
-                                <Label Content="{Binding ForumDTO.Username}" FontFamily="{StaticResource Roboto}" FontSize="16" Padding="0"/>
-                            </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,15,5" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                            <Image Source="{StaticResource PeopleIcon}" Height="20" Width="20" Margin="0,0,5,0"/>
+                            <Label Content="{Binding ForumDTO.Username}" FontFamily="{StaticResource Roboto}" FontSize="16" Padding="0"/>
                         </StackPanel>
 
                     </Grid>
                 </Border>
 
-                <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Grid.Row="1" Margin="10" Background="{StaticResource Beige}">
+                <ScrollViewer x:Name="scrollViewer" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" Grid.Row="1" Margin="10" Background="{StaticResource Beige}">
                     <ItemsControl x:Name="itemsControlAccommodations" ItemsSource="{Binding CommentDTOs}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <local:ForumCommentCard Height="80"/>
+                                <local:ForumCommentCard/>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                         <ItemsControl.ItemsPanel>
@@ -80,6 +82,15 @@
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                     </ItemsControl>
+                    <ScrollViewer.Style>
+                        <Style TargetType="ScrollViewer">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ForumDTO.IsClosed}" Value="True">
+                                    <Setter Property="Grid.RowSpan" Value="2"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ScrollViewer.Style>
                 </ScrollViewer>
 
                 <Border Grid.Row="2" BorderBrush="Black" BorderThickness="0,1,0,0" Background="{StaticResource SoftGreen}">
@@ -96,7 +107,17 @@
                         <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource Header}" VerticalContentAlignment="Center" BorderBrush="Transparent"
                                Padding="0" FontSize="20" Content="Express your opinion:" Width="200" HorizontalAlignment="Left" Margin="10,5,0,0"/>
 
-                        <TextBox Grid.Row="1" Margin="10,5,10,5" Text="{Binding CommentDTO.Text}"/>
+                        <TextBox Grid.Row="1" Margin="10,5,10,5" Text="{Binding CommentDTO.Text}">
+                            <TextBox.Style>
+                                <Style TargetType="TextBox">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding ForumDTO.IsClosed}" Value="True">
+                                            <Setter Property="IsEnabled" Value="False"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBox.Style>
+                        </TextBox>
 
                         <Button x:Name="PostButton" Grid.Column="1" Grid.Row="1" Height="60" Width="60" 
                                 Background="{StaticResource Green}" Click="PostButton_Click">
@@ -106,6 +127,15 @@
                             </StackPanel>
                         </Button>
                     </Grid>
+                    <Border.Style>
+                        <Style TargetType="Border">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ForumDTO.IsClosed}" Value="True">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Border.Style>
                 </Border>
             </Grid>
         </Border>
